[gd_scene load_steps=2 format=3 uid="uid://c4tm8i3lmwl6q"]

[ext_resource type="Script" uid="uid://dpv4cx7d6r06a" path="res://addons/reaction/components/ReactionUIIText.gd" id="1_qe0f8"]

[node name="ReactionUIIText" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_qe0f8")

[node name="UseFileCheckButton" type="CheckButton" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
text = "Use dialog file"

[node name="TextsContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2

[connection signal="toggled" from="UseFileCheckButton" to="." method="_on_use_file_check_button_toggled"]
